# my_e-commerce

./: .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_loader_py.html  z_145eef247bfb46b6_utils_py.html
src/: loader.py  utils.py
tests/: conftest.py  test_loader.py  test_utils.py
